--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,28 @@
 /* write your override styles here */
+#wall .tag-1 {
+  display: none;
+}
+
+#wall div + #tag-2 {
+  display: none;
+}
+
+div#wall #tag-2 + #tag-3.wicked {
+  display: none;
+}
+
+#wall .parent #tag-4 {
+  display: none;
+}
+
+div#wall .parent + .parent #tag-5.slick {
+  display: none;
+}
+
+div#wall .parent + div.parent div:last-child div#tag-6 {
+  display: none;
+}
+
+body div#wall .parent + div.parent div > #tag-7.slick {
+  display: none;
+}
